<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="IP Address" />

    <EditText
        android:id="@+id/ip_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/ip_address_label"
        android:inputType="textEmailAddress" />

  <TextView
      android:id="@+id/textView4"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="Port Number" />

  <EditText
      android:id="@+id/port_field"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="4dp"
      android:layout_marginTop="4dp"
      android:layout_marginRight="4dp"
      android:layout_marginBottom="16dp"
      android:fontFamily="sans-serif"
      android:hint="@string/port_label"
      android:inputType="numberDecimal" />

  <CheckBox
      android:id="@+id/custom_image_select"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:layout_marginLeft="4dp"
      android:layout_marginRight="4dp"
      android:layout_marginBottom="16dp"
      android:fontFamily="sans-serif"
      android:hint="@string/use_custom_image_selection"/>

</LinearLayout>