<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/select_image">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/scan_id_button"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/front_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_weight="0.5"
            android:foreground = "?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/front_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/image__view_margin"
                    android:src="@drawable/ic_camera" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@color/text_background"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/info_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_weight="0.5"
                        android:padding="16dp"
                        android:text="@string/front_card_of_id_label"
                        android:textColor="@color/textColor"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/take_front_card_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:enabled="true"
                        android:text="@string/take_photo_label" />

                </LinearLayout>

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <!-- A CardView that contains a TextView -->
        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/back_card"
            android:foreground = "?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_weight="0.5"
            card_view:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/back_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/image__view_margin"
                    android:src="@drawable/ic_camera" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@color/text_background"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_weight="0.5"
                        android:padding="16dp"
                        android:text="@string/back_of_id_card_label"
                        android:textColor="@color/textColor"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/take_back_card_image_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:enabled="true"
                        android:text="@string/take_photo_label" />

                </LinearLayout>

            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <ProgressBar
        android:layout_centerInParent="true"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/scan_id_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:background="@drawable/button"
        android:padding="8dp"
        android:text="@string/scan_id_label"
        android:textColor="@color/button_text_color" />
</RelativeLayout>